Update templates and styles
Updated templates and styles, header, ghost and github.

--- a/src/app/styles/_partials/_mixins.scss
+++ b/src/app/styles/_partials/_mixins.scss
@@ -1,15 +1,10 @@
-@mixin createTag($language, $color) {
-	.#{$language} {
+@mixin createTag($tag, $color) {
+	.#{$tag} {
 		color: $color;
 
 		&:before {
-			content: '#';
+			background-color: $color;
 		}
-
-	}
-
-	.#{$language}:hover {
-		border-bottom: 2px solid $color;
 	}
 }
 
