--- a/src/app/templates/_includes/_sections/_aboutme.jade
+++ b/src/app/templates/_includes/_sections/_aboutme.jade
@@ -8,13 +8,13 @@ section.aboutme(itemprop="author" itemscope itemtype="http://schema.org/Person")
                 .getintouch
                     a.btn.btn-red(href="mailto:crloscuesta@gmail.com?subject=Hello") Contact Me
                     .social
-                        a(href="https://twitter.com/#{social.twitter}", target="_blank")
-                            svg.icon.icon-linkedin
+                        a(itemprop="sameAs", onmousedown="ga('send', 'event', 'Social Icons', 'GitHub');", href="https://twitter.com/#{social.twitter}", target="_blank")
+                            svg.icon.icon-twitter
                                 use(xlink:href="#icon-twitter")
-                        a(href="https://github.com/#{social.github}", target="_blank")
+                        a(itemprop="sameAs", onmousedown="ga('send', 'event', 'Social Icons', 'Twitter');", href="https://github.com/#{social.github}", target="_blank")
                             svg.icon.icon-github
                                 use(xlink:href="#icon-github")
-                        a(href="https://es.linkedin.com/in/#{social.linkedin}", target="_blank")
+                        a(itemprop="sameAs", onmousedown="ga('send', 'event', 'Social Icons', 'LinkedIn');", href="https://es.linkedin.com/in/#{social.linkedin}", target="_blank")
                             svg.icon.icon-linkedin
                                 use(xlink:href="#icon-linkedin")
             .block.col-xs-12.col-sm-6
