--- a/src/app/templates/_includes/_body.jade
+++ b/src/app/templates/_includes/_body.jade
@@ -1,6 +1,6 @@
 include _sections/_aboutme.jade
 include _sections/_github.jade
-//-include _sections/_twitter.jade
+include _sections/_twitter.jade
 include _sections/_ghost.jade
 include _footer.jade
 //-script.
