--- a/src/app/templates/_includes/_header.jade
+++ b/src/app/templates/_includes/_header.jade
@@ -5,4 +5,4 @@ header.site-header(itemprop="author", itemscope, itemtype="http://schema.org/Per
             span.my-name  #{me.name}
         h2.job #{me.job}
         .buttons
-            a.btn.btn-large.btn-blue(href="#") Get in touch
+            a.btn.btn-large.btn-blue(href="mailto:#{me.mail}?subject=Hello") Get in touch
