--- a/src/app/templates/_includes/_sections/_github.jade
+++ b/src/app/templates/_includes/_sections/_github.jade
@@ -1,6 +1,6 @@
 section.github
     .wrap
-        h2 GitHub
+        h2.section-title GitHub
         .row.around-xs
             -each github in githubData.items
                 article.github-repo.col-xs-12.col-sm-6.col-md-4
