--- a/src/app/templates/_includes/_sections/_twitter.jade
+++ b/src/app/templates/_includes/_sections/_twitter.jade
@@ -1,29 +1,31 @@
 section.twitter
     .wrap
-        h2 Twitter
+        h2.section-title Twitter
         .row
-            -each tweet in twitterData
-                article.tweet.col-xs-12
-                    h4 #{tweet.user.name} -
-                        span.handle 
-                            a(href="https://twitter.com/#{tweet.user.screen_name}") @#{tweet.user.screen_name}
-                    h5 !{tweet.text_parsed}
-                    if tweet.image
-                        a(href="#{tweet.image}")
-                            img.tweet-img(src="#{tweet.image}:thumb")
-                    .tweet-actions
-                        a(href="https://twitter.com/intent/tweet?in_reply_to=#{tweet.id_str}", onmousedown="ga('send', 'event', 'Twitter', 'Reply');", target="_blank")
-                            svg.icon.icon-reply
-                                use(xlink:href="#icon-reply")
-                        a(href="https://twitter.com/intent/retweet?tweet_id=#{tweet.id_str}", onmousedown="ga('send', 'event', 'Twitter', 'Retweet');", target="_blank")
-                            svg.icon.icon-retweet
-                                use(xlink:href="#icon-retweet")
-                            span.rts #{tweet.retweet_count}
-                        a(href="https://twitter.com/intent/favorite?tweet_id=#{tweet.id_str}", onmousedown="ga('send', 'event', 'Twitter', 'Favorite');", target="_blank")
-                            svg.icon.icon-heart
-                                use(xlink:href="#icon-heart")
-                            span.likes #{tweet.favorite_count}
-        div(style="display:flex;")
+            ul
+                -each tweet in twitterData
+                    li
+                        article.tweet.col-xs-12
+                            h4 #{tweet.user.name} -
+                                span.handle 
+                                    a(href="https://twitter.com/#{tweet.user.screen_name}") @#{tweet.user.screen_name}
+                            h5 !{tweet.text_parsed}
+                            if tweet.image
+                                a(href="#{tweet.image}")
+                                    img.tweet-img(src="#{tweet.image}:thumb")
+                            .tweet-actions
+                                a(href="https://twitter.com/intent/tweet?in_reply_to=#{tweet.id_str}", onmousedown="ga('send', 'event', 'Twitter', 'Reply');", target="_blank")
+                                    svg.icon.icon-reply
+                                        use(xlink:href="#icon-reply")
+                                a(href="https://twitter.com/intent/retweet?tweet_id=#{tweet.id_str}", onmousedown="ga('send', 'event', 'Twitter', 'Retweet');", target="_blank")
+                                    svg.icon.icon-retweet
+                                        use(xlink:href="#icon-retweet")
+                                    span.rts #{tweet.retweet_count}
+                                a(href="https://twitter.com/intent/favorite?tweet_id=#{tweet.id_str}", onmousedown="ga('send', 'event', 'Twitter', 'Favorite');", target="_blank")
+                                    svg.icon.icon-heart
+                                        use(xlink:href="#icon-heart")
+                                    span.likes #{tweet.favorite_count}
+        .more-btn
             a.btn.btn-large.btn-blue(href="https://twitter.com/intent/follow?screen_name=#{social.twitter}", onmousedown="ga('send', 'event', 'Social', 'Follow Twitter');", target="_blank")
                 svg.icon.icon-github
                         use(xlink:href="#icon-twitter")
