Update templates and styles
Updated templates, styles, colors and the menu.

--- a/src/app/styles/_partials/_vars.scss
+++ b/src/app/styles/_partials/_vars.scss
@@ -1,14 +1,13 @@
 $white: #fff;
 $accent: #FF5252;
+$aboutme: #F1F6F8;
 $accentlight: #64B5F6;
 $accentgray: #B0BEC5;
 $yellow: #FFD600;
 $pink: #EC407A;
 $green: #4CAF50;
 $text: #37474F;
-$menu: #37474F;
-$whitesection: #f8f8f8;
-$blacksection: #232323;
+$menu: #FF5252;
 $textHover: #546E7A;
 
 $javascript: #fbdd51;
