--- a/src/app/templates/_includes/_sections/_github.jade
+++ b/src/app/templates/_includes/_sections/_github.jade
@@ -1,6 +1,7 @@
 section.github
     .wrap
         h2.section-title GitHub
+        h4.section-subtitle The most popular projects of my github.
         .row.around-xs
             -each github in githubData.items
                 article.col-xs-12.col-sm-6.col-md-4.github-repo
