--- a/src/app/styles/_partials/_menu.scss
+++ b/src/app/styles/_partials/_menu.scss
@@ -4,8 +4,8 @@
     overflow: hidden;
     margin: 0;
     padding: 0;
-    width: 96px;
-    height: 96px;
+    width: 90px;
+    height: 90px;
     font-size: 0;
     text-indent: -9999px;
     appearance: none;
@@ -22,15 +22,17 @@
     	top: 44px;
     	left: 18px;
     	right: 18px;
-    	height: 6px;
+    	height: 3px;
     	background: $menu;
+        border-radius: 50px;
 
     	&::before, &::after {
     		position: absolute;
     		display: block;
     		left: 0;
     		width: 100%;
-    		height: 6px;
+    		height: 3px;
+            border-radius: 50px;
     		background-color: $menu;
     		content: "";
     	}
@@ -114,7 +116,7 @@
 
 .c-hamburger__input:checked ~ .modal {
     opacity: 1;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(55, 71, 79, 0.9);
     visibility: visible;
 
     .item {
