--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -10,19 +10,27 @@
 	padding: 0 1em;
 }
 
-.social .icon {
-	display: inline-block;
-	width: 1.8em;
-	height: 1.8em;
-	transition: all .2s ease-out;
-
-	&:hover {
-		fill: $white;
+.social {
+	.icon {
+		display: inline-block;
+		width: 1.8em;
+		height: 1.8em;
+		transition: all .2s ease-out;
+		fill: $text;
+		margin-right: 1em;
 	}
 }
 
-.btn:hover {
-	box-shadow: 0 .5em 1.5em rgba(0, 0, 0, .15);
+.icon-twitter:hover {
+	fill: #55acee;
+}
+
+.icon-github:hover {
+	fill: #000;
+}
+
+.icon-linkedin:hover {
+	fill: #0077B5;
 }
 
 .more-btn {
@@ -55,6 +63,10 @@
 	&-red {
 		background-color: $accent;
 		color: $white;
+
+		&:hover, &-raised {
+			box-shadow: 0 .5em 1.5em rgba(255, 82, 82, .45);
+		}
 	}
 
 	&-blue {
@@ -84,7 +96,7 @@
 
 .site-header {
 	color: $text;
-	background: #fff;
+	background: $white;
 	padding: 5em;
 	text-align: center;
 
@@ -150,24 +162,16 @@ nav.nav {
 	}
 }
 
-.heart {
-	color: $pink;
-}
-
-.my-name {
+.my-name, .heart {
 	color: $accent;
 }
 
 .aboutme {
-	background-color: #3F51B5;
-	color:$white;
-	
+	background-color: $aboutme;
+	color: $text;
+
 	h1 {
 		padding: 0;
-	}
-
-	.icon {
-		margin-right: 1em;
 	}
 }
 
@@ -185,7 +189,7 @@ nav.nav {
 
 .block {
     position: absolute;
-    margin-top: -62px;
+    margin-top: -60px;
     width: 50%;
 }
 
@@ -418,9 +422,13 @@ nav.nav {
 	}
 }
 
-.section-title {
+.section-title, .section-subtitle {
 	text-align: center;
 	font-weight: 400;
+}
+
+.section-subtitle {
+	font-weight: 300;
 }
 
 .post-info {
@@ -525,6 +533,7 @@ footer {
 @media (max-width: 768px) {
 	header.site-header {
 		padding: 5em 1.5em 5em 1.5em;
+		font-size: 15px
 	}
 
 	html, body {
@@ -533,10 +542,6 @@ footer {
 
 	section h1 {
 		padding: 0 1em;
-	}
-
-	.col-xs-12.title {
-		padding: 0;
 	}
 
 	.c-hamburger--htx {
