--- a/src/app/templates/_includes/_footer.jade
+++ b/src/app/templates/_includes/_footer.jade
@@ -3,13 +3,13 @@ footer.row.middle-xs
         h3 #{me.name}
         ul.navigation
             li.item
-                a(href='https://carloscuesta.me', onmousedown="ga('send', 'event', 'Menu', 'Home');")
+                a(href='https://carloscuesta.me', onmousedown="ga('send', 'event', 'Footer Nav', 'Home');")
                     |Home
             li.item
-                a(href='https://carloscuesta.me/blog', onmousedown="ga('send', 'event', 'Menu', 'Blog');", target="_blank")
+                a(href='https://carloscuesta.me/blog', onmousedown="ga('send', 'event', 'Footer Nav', 'Blog');", target="_blank")
                     |Blog
             li.item
-                a(href='#{me.mail}', onmousedown="ga('send', 'event', 'Menu', 'Mail');", target="_blank")
+                a(href='#{me.mail}', onmousedown="ga('send', 'event', 'Footer Nav', 'Mail');")
                     |Contact
 
     .social.col-xs-12.col-sm-6
