--- a/src/app/styles/_partials/_vars.scss
+++ b/src/app/styles/_partials/_vars.scss
@@ -1,18 +1,25 @@
-$white: #fff;
-$accent: #FF5252;
-$aboutme: #F1F6F8;
-$accentlight: #64B5F6;
-$accentgray: #B0BEC5;
-$yellow: #FFD600;
-$pink: #EC407A;
-$green: #4CAF50;
-$text: #37474F;
-$menu: #FF5252;
-$textHover: #546E7A;
+/* COLORS */
 
-$javascript: #fbdd51;
-$nodejs: #8BC34A;
-$css: #42A5F5;
+$accent: #FF5252;
+$white: #FFF;
+$menu: #FF5252;
+$sectionHighlight: #F1F6F8;
+
+/* TEXT */
+
+$text: #37474F;
+$textHover: #78909C;
+$textLight: #B0BEC5;
+
+/* LANGUAGES, TAGS AND ICONS */
+
 $html: #FF5722;
+$css: #42A5F5;
+$javascript: #FBDD51;
+$nodejs: #8BC34A;
 $npm: #E53935;
 $tools: #3367D6;
+$personal: #EC407A;
+$life: #4CAF50;
+$stars: #FFD600;
+$web: #64B5F6;
