--- a/src/app/templates/_includes/_footer.jade
+++ b/src/app/templates/_includes/_footer.jade
@@ -14,7 +14,7 @@ footer.row.middle-xs
 
     .social.col-xs-12.col-sm-6
         a(href="https://twitter.com/#{social.twitter}", target="_blank")
-            svg.icon.icon-linkedin
+            svg.icon.icon-twitter
                 use(xlink:href="#icon-twitter")
         a(href="https://github.com/#{social.github}", target="_blank")
             svg.icon.icon-github
