--- a/src/app/templates/_includes/_header.jade
+++ b/src/app/templates/_includes/_header.jade
@@ -1,7 +1,8 @@
 include _nav.jade
 header.site-header(itemprop="author", itemscope, itemtype="http://schema.org/Person")
     .wrap
-        h1 Hi! I'm
+        h1 
+            span.salute Hi! I'm
             span.my-name  #{me.name}
         h2.job #{me.job}
         .buttons
