--- a/src/app/templates/_includes/_sections/_blog.jade
+++ b/src/app/templates/_includes/_sections/_blog.jade
@@ -1,6 +1,7 @@
 section.blog
     .wrap
         h2.section-title Blog
+        h4.section-subtitle The latests posts of my blog.
         .row.around-xs
             -each post in ghostData.posts
                 .col-xs-12.col-sm-6.col-md-5(style="display:flex;")
