--- a/src/app/templates/_includes/_sections/_twitter.jade
+++ b/src/app/templates/_includes/_sections/_twitter.jade
@@ -1,6 +1,7 @@
 section.twitter
     .wrap
         h2.section-title Twitter
+        h4.section-subtitle The latests tweets of my timeline.
         .row
             ul
                 -each tweet in twitterData
