--- a/src/app/templates/_includes/_footer.jade
+++ b/src/app/templates/_includes/_footer.jade
@@ -1,7 +1,7 @@
 footer.row.middle-xs
     .col-xs-12.col-sm-6
         h3 #{me.name}
-        ul.navigation
+        ul.footer-navigation
             li.item
                 a(href='https://carloscuesta.me', onmousedown="ga('send', 'event', 'Footer Nav', 'Home');")
                     |Home
