--- a/src/app/templates/_includes/_head.jade
+++ b/src/app/templates/_includes/_head.jade
@@ -34,5 +34,5 @@ link(rel="mask-icon" href="c.svg" color="#FF5252")
 link(rel="stylesheet", type="text/css", href="/style.css")
 //-style
     include ../../static/css/style.css
-script
+//-script
     include ../../static/js/fonts.js
