--- a/src/app/templates/_includes/_head.jade
+++ b/src/app/templates/_includes/_head.jade
@@ -31,8 +31,8 @@ meta(name='msapplication-TileColor', content='#FF5252')
 meta(name='msapplication-TileImage', content='ms-icon-144x144.png')
 meta(name='theme-color', content='#FF5252')
 link(rel="mask-icon" href="c.svg" color="#FF5252")
-link(rel="stylesheet", type="text/css", href="/style.css")
-//-style
+//-link(rel="stylesheet", type="text/css", href="/style.css")
+style
     include ../../static/css/style.css
-//-script
+script
     include ../../static/js/fonts.js
