--- a/src/app/styles/error.scss
+++ b/src/app/styles/error.scss
@@ -5,7 +5,7 @@ html, body {
 	margin: 0;
     padding: 0;
     text-rendering: optimizeLegibility;
-    font-family: 'opensans','helvetica';
+    font-family: 'Montserrat','helvetica';
     font-size: 16px;
     line-height: 1.5;
     font-weight: 300;
