--- a/src/app/styles/_partials/_defaults.scss
+++ b/src/app/styles/_partials/_defaults.scss
@@ -1,7 +1,7 @@
 html, body {
 	margin: 0;
     padding: 0;
-    font-family: 'Montserrat','Helvetica';
+    font-family: 'Montserrat','Helvetica Neue';
     font-size: 16px;
     line-height: 1.5;
     font-weight: 300;
